--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,21 +1,34 @@
+exclude: 'docs|node_modules|migrations|.git|.tox'
+default_stages: [commit]
 fail_fast: true
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.1.0
+    rev: v3.4.0
     hooks:
-      - id: debug-statements
       - id: trailing-whitespace
+        language_version: python3
       - id: end-of-file-fixer
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: 6de8252c035844f1e679f509b5f37340b44d5c39
-    hooks:
-    -   id: flake8
+        language_version: python3
+      - id: check-yaml
+        language_version: python3
+
   - repo: https://github.com/psf/black
-    rev: 19.3b0
+    rev: 20.8b1
     hooks:
       - id: black
-  - repo: https://github.com/asottile/blacken-docs
-    rev: v1.7.0
+        language_version: python3
+
+  - repo: https://github.com/timothycrosley/isort
+    rev: 5.7.0
     hooks:
-      - id: blacken-docs
-        additional_dependencies: [black==19.3b0]
+      - id: isort
+        language_version: python3
+
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.8.4
+    hooks:
+      - id: flake8
+        language_version: python3
+        args: ['--config=setup.cfg']
+        additional_dependencies: [flake8-isort]
